small fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ video {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
 }
 
 #newWine {
